# Todo-List

./: .env  .gitignore  README.md
scripts/: init_db.sh
todo_api/: Cargo.toml
todo_api/migrations/: 20240312021653_user_table.sql  20240312021711_category_table.sql  20240312021733_todo_table.sql
todo_api/src/: main.rs
todo_api/src/extractors/: authentication_token.rs
todo_api/src/routes/: category.rs  todo.rs  user.rs
todo_app/: index.html  package-lock.json  package.json
todo_app/src/: App.svelte  Login.svelte  app.css
todo_app/src/Main/: Main.svelte  category-modal.svelte
