[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version="1.0.197", features=["derive"] }
tokio = { version="1", features=["macros"] }
sqlx-cli = "^0.7"
dotenv = "0.15.0"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"
]
